--- a/package.json
+++ b/package.json
@@ -14,8 +14,17 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "better-scroll": "^1.14.1",
+    "lib-flexible": "^0.3.2",
+    "mockjs": "^1.0.1-beta3",
+    "px2rem-loader": "^0.1.9",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2",
+    "swiper": "^4.5.0",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
